images have compressed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="@frontMan">
-    <title>E-Commerce Tile Shop</title>
+    <title>E-Commerce - Tile Shop</title>
     <link rel="icon" type="image/x-icon" href="./images/min/flet.ico">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./libs/animations/animate.min.css">
@@ -82,7 +82,7 @@
                 <div class="swiper-wrapper tech_cards sliderWrapper">
                     <div class="swiper-slide wow tech_cards__card firstSliderCard">
                         <div class="tech_cards__cardImage firstGalleryImage">
-                            <img src="./images/firstGallery1.jpg">
+                            <img src="./images/min/firstgallery1_min.jpg" loading="lazy">
                             <div class="galleryTextBlock">
                                 <h3 class="tech_h3Twenty">Bathroom Tiles</h3>
                                 <p class="tech_parTwenty">Ante mus blandit sapien sociosqu per consequat ad.</p>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="swiper-slide wow tech_cards__card firstSliderCard">
                         <div class="tech_cards__cardImage firstGalleryImage">
-                            <img src="./images/firstGallery2.jpg">
+                            <img src="./images/firstGallery2.jpg" loading="lazy">
                             <div class="galleryTextBlock">
                                 <h3 class="tech_h3Twenty">Marble</h3>
                                 <p class="tech_parTwenty">Ante mus blandit sapien sociosqu</p>
@@ -100,14 +100,14 @@
                     </div>
                     <div class="swiper-slide wow tech_cards__card firstSliderCard">
                         <div class="tech_cards__cardImage firstGalleryImage">
-                            <img src="./images/firstGallery3.jpg">
+                            <img src="./images/min/firstgallery3_min.jpg">
                             <div class="galleryTextBlock">
                                 <h3 class="tech_h3Twenty">Outdoor Flooring</h3>
                                 <p class="tech_parTwenty">Ante mus blandit sapien sociosqu per consequat ad.</p>
                             </div>
                         </div>
                         <div class="tech_cards__cardImage firstGalleryImage">
-                            <img src="./images/firstGallery4.jpg">
+                            <img src="./images/min/firstgallery4_min.jpg" loading="lazy">
                             <div class="galleryTextBlock">
                                 <h3 class="tech_h3Twenty">Kitchen Interior</h3>
                                 <p class="tech_parTwenty">Ante mus blandit sapien sociosqu per consequat ad.</p>
@@ -151,13 +151,13 @@
                 <div class="thirdSlider swiper">
                     <div class="thirdSliderWrapper swiper-wrapper">
                         <div class="thirdSliderSlide swiper-slide wow">
-                            <img src="./images/thirdgallery1.jpg">
+                            <img src="./images/min/thirdgallery1_min.jpg" loading="lazy">
                         </div>
                         <div class="thirdSliderSlide swiper-slide wow">
-                            <img src="./images/thirdgallery2.jpg">
+                            <img src="./images/min/thirdgallery2_min.jpg" loading="lazy">
                         </div>
                         <div class="thirdSliderSlide swiper-slide wow">
-                            <img src="./images/thirdgallery3.jpg">
+                            <img src="./images/min/thirdgallery3_min.jpg" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                     <div class="playerWrapperTextBlock animate__animated wow animate__fadeInRight">
                         <div class="playerIconWrapper">
                             <div id="playerIcon">
-                                <img src="./images/playerPlay.svg">
+                                <img src="./images/playerplay.svg">
                             </div>
                         </div>
                         <div class="textContent">
@@ -204,7 +204,7 @@
                 <div class="fourthSliderWrapper swiper-wrapper">
                     <div class="fourthSlide swiper-slide wow">
                         <div class="fourthSlideImage">
-                            <img src="./images/fourthSlide1.jpg">
+                            <img src="./images/min/fourthslide1_min.jpg" loading="lazy">
                         </div>
                         <div class="fourthSlideTextBlock">
                             <h3 class="tech_h3Twenty">Kingdom Tower</h3>
@@ -213,7 +213,7 @@
                     </div>
                     <div class="fourthSlide swiper-slide wow">
                         <div class="fourthSlideImage">
-                            <img src="./images/fourthSlide2.jpg">
+                            <img src="./images/min/fourthslide2_min.jpg" loading="lazy">
                         </div>
                         <div class="fourthSlideTextBlock">
                             <h3 class="tech_h3Twenty">Dubai Mall</h3>
@@ -222,7 +222,7 @@
                     </div>
                     <div class="fourthSlide swiper-slide wow">
                         <div class="fourthSlideImage">
-                            <img src="./images/fourthSlide3.jpg">
+                            <img src="./images/min/fourthslide3_min.jpg" loading="lazy">
                         </div>
                         <div class="fourthSlideTextBlock">
                             <h3 class="tech_h3Twenty">King Road Offices</h3>
@@ -231,7 +231,7 @@
                     </div>
                     <div class="fourthSlide swiper-slide wow">
                         <div class="fourthSlideImage">
-                            <img src="./images/fourthSlide4.jpg">
+                            <img src="./images/min/fourthslide4_min.jpg" loading="lazy">
                         </div>
                         <div class="fourthSlideTextBlock">
                             <h3 class="tech_h3Twenty">Beach Tower Alupang</h3>
@@ -257,7 +257,7 @@
             <div class="fifthCatalogue">
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/prod1.jpg">
+                        <img src="./images/prod1.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3Twenty">Zurich Vision 60×60</h3>
@@ -266,7 +266,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/prod2.jpg">
+                        <img src="./images/min/prod2_min.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3Twenty">Zurich Pearl 60×60</h3>
@@ -275,7 +275,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/prod3.jpg">
+                        <img src="./images/min/prod3_min.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3Twenty">Zurich Grey 60×60</h3>
@@ -284,7 +284,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/prod4.jpg">
+                        <img src="./images/prod4.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3Twenty">Zurich Dark Grey 60×60</h3>
@@ -293,7 +293,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/prod5.jpg">
+                        <img src="./images/prod5.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3Twenty">Windsor White Oak</h3>
@@ -302,7 +302,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/prod6.jpg">
+                        <img src="./images/prod6.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3Twenty">Sicily Grey Décor 30×60</h3>
@@ -311,7 +311,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/prod7.jpg">
+                        <img src="./images/prod7.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3Twenty">Sardinia White</h3>
@@ -320,7 +320,7 @@
                 </div>
                 <div class="fifthCatalogueCard">
                     <div class="fifthCatalogueImage">
-                        <img src="./images/prod8.jpg">
+                        <img src="./images/min/prod8_min.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
                         <h3 class="tech_h3Twenty">Sicily Grey 30×60</h3>
