work about tablet styles has been finished; header fixed.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav id="menuContent">
         <div class="contentBorder burgerWrapper">
             <div id="searchButton" class="headerTopButton searchButton">
-                <button><img id="headerSearch" class="icon" src="./images/searchicon.svg" alt=""></button>
+                <button><img id="headerSearch" class="icon" src="./images/searchicon.svg"></button>
             </div>
             <ul class="navigation">
                 <li>HOME</li>
@@ -58,7 +58,7 @@
             <div class="tech_textBlock startTextCard">
                 <div class="startTextCard__textBlock animate__animated animate__fadeInRight">
                     <h1>New Generation Ceramic Tile</h1>
-                    <p class="tech_parTwenty">
+                    <p class="tech_parFontSize">
                         Penatibus sem vitae mollis luctus mi tellus. Maximus eu eleifend <br>
                         aptent dapibus metus maecenas consequat. Elementum interdum a <br>
                         semper. Netus nullam eros nisi volutpat nibh ex ultricies. Pharetra <br>
@@ -73,50 +73,51 @@
         <div class="contentBorder firstContent">
             <div class="tech_secTitleBlock firstTitle">
                 <h2 class="animate__animated wow animate__fadeInLeft">Products</h2>
-                <p class="tech_parTwenty animate__animated wow animate__fadeInLeft">
+                <p class="tech_parFontSize animate__animated wow animate__fadeInLeft">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has <br>
                     been the industry's standard dummy text.
                 </p>
             </div>
             <div class="swiper firstSlider">
                 <div class="swiper-wrapper tech_cards sliderWrapper">
-                    <div class="swiper-slide wow tech_cards__card firstSliderCard">
-                        <div class="tech_cards__cardImage firstGalleryImage">
+                    <div class="swiper-slide wow firstSliderCard" id="firstNthCard">
+                        <div class="firstGalleryImage">
                             <img src="./images/min/firstgallery1_min.jpg" loading="lazy">
                             <div class="galleryTextBlock">
-                                <h3 class="tech_h3Twenty">Bathroom Tiles</h3>
-                                <p class="tech_parTwenty">Ante mus blandit sapien sociosqu per consequat ad.</p>
+                                <h3 class="tech_h3FontSize">Bathroom Tiles</h3>
+                                <p class="tech_parFontSize">Ante mus blandit sapien sociosqu per consequat ad.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide wow tech_cards__card firstSliderCard">
-                        <div class="tech_cards__cardImage firstGalleryImage">
+                    <div class="swiper-slide wow firstSliderCard" id="secondNthCard">
+                        <div class="firstGalleryImage">
                             <img src="./images/firstGallery2.jpg" loading="lazy">
                             <div class="galleryTextBlock">
-                                <h3 class="tech_h3Twenty">Marble</h3>
-                                <p class="tech_parTwenty">Ante mus blandit sapien sociosqu</p>
+                                <h3 class="tech_h3FontSize">Marble</h3>
+                                <p class="tech_parFontSize">Ante mus blandit sapien sociosqu</p>
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide wow tech_cards__card firstSliderCard">
-                        <div class="tech_cards__cardImage firstGalleryImage">
+                    <div class="swiper-slide wow firstSliderCard" id="thirdNthCard" >
+                        <div class="firstGalleryImage">
                             <img src="./images/min/firstgallery3_min.jpg">
                             <div class="galleryTextBlock">
-                                <h3 class="tech_h3Twenty">Outdoor Flooring</h3>
-                                <p class="tech_parTwenty">Ante mus blandit sapien sociosqu per consequat ad.</p>
+                                <h3 class="tech_h3FontSize">Outdoor Flooring</h3>
+                                <p class="tech_parFontSize">Ante mus blandit sapien sociosqu per consequat ad.</p>
                             </div>
                         </div>
-                        <div class="tech_cards__cardImage firstGalleryImage">
+                        <div class="firstGalleryImage">
                             <img src="./images/min/firstgallery4_min.jpg" loading="lazy">
                             <div class="galleryTextBlock">
-                                <h3 class="tech_h3Twenty">Kitchen Interior</h3>
-                                <p class="tech_parTwenty">Ante mus blandit sapien sociosqu per consequat ad.</p>
+                                <h3 class="tech_h3FontSize">Kitchen Interior</h3>
+                                <p class="tech_parFontSize">Ante mus blandit sapien sociosqu per consequat ad.</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </section>
@@ -125,7 +126,7 @@
             <div class="tech_textBlock secondTextCard">
                 <div class="secondTextCard__textBlock">
                     <h1 class="animate__animated wow animate__fadeInUp">Vision</h1>
-                    <p class="tech_parTwenty animate__animated wow animate__fadeInLeftBig">
+                    <p class="tech_parFontSize animate__animated wow animate__fadeInLeftBig">
                         Penatibus sem vitae mollis luctus mi tellus. Maximus eu eleifend <br>
                         aptent dapibus metus maecenas consequat. Elementum interdum a <br>
                         semper. Netus nullam eros nisi volutpat nibh ex ultricies. Pharetra<br>
@@ -141,7 +142,7 @@
             <div class="thirdContent__content">
                 <div class="thirdContent__textBlock">
                     <h1 class="animate__animated wow animate__fadeInLeft">Creative Solutions <br> by Professional Designers</h1>
-                    <p class="tech_parTwenty animate__animated wow animate__fadeInLeftBig">
+                    <p class="tech_parFontSize animate__animated wow animate__fadeInLeftBig">
                         Penatibus sem vitae mollis luctus mi tellus. Maximus eu eleifend <br>
                         aptent dapibus metus maecenas consequat. Elementum interdum a <br>
                         semper. Netus nullam eros nisi volutpat nibh ex ultricies. Pharetra <br>
@@ -195,7 +196,7 @@
         <div class="contentBorder fourthContent">
             <div class="tech_secTitleBlock fourthTitle">
                 <h2 class="animate__animated wow animate__fadeInUp">Projects</h2>
-                <p class="tech_parTwenty animate__animated wow animate__fadeInLeft">
+                <p class="tech_parFontSize animate__animated wow animate__fadeInLeft">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has <br>
                     been the industry's standard dummy text.
                 </p>
@@ -204,10 +205,10 @@
                 <div class="fourthSliderWrapper swiper-wrapper">
                     <div class="fourthSlide swiper-slide wow">
                         <div class="fourthSlideImage">
-                            <img src="./images/min/fourthslide1_min.jpg" loading="lazy">
+                            <img src="./images/min/fourthslide1_min.jpg" class="swiper-lazy" loading="lazy">
                         </div>
                         <div class="fourthSlideTextBlock">
-                            <h3 class="tech_h3Twenty">Kingdom Tower</h3>
+                            <h3 class="tech_h3FontSize">Kingdom Tower</h3>
                             <p>Marble Flooring</p>
                         </div>
                     </div>
@@ -216,7 +217,7 @@
                             <img src="./images/min/fourthslide2_min.jpg" loading="lazy">
                         </div>
                         <div class="fourthSlideTextBlock">
-                            <h3 class="tech_h3Twenty">Dubai Mall</h3>
+                            <h3 class="tech_h3FontSize">Dubai Mall</h3>
                             <p>Wood Flooring</p>
                         </div>
                     </div>
@@ -225,7 +226,7 @@
                             <img src="./images/min/fourthslide3_min.jpg" loading="lazy">
                         </div>
                         <div class="fourthSlideTextBlock">
-                            <h3 class="tech_h3Twenty">King Road Offices</h3>
+                            <h3 class="tech_h3FontSize">King Road Offices</h3>
                             <p>Outdoor Flooring</p>
                         </div>
                     </div>
@@ -234,7 +235,7 @@
                             <img src="./images/min/fourthslide4_min.jpg" loading="lazy">
                         </div>
                         <div class="fourthSlideTextBlock">
-                            <h3 class="tech_h3Twenty">Beach Tower Alupang</h3>
+                            <h3 class="tech_h3FontSize">Beach Tower Alupang</h3>
                             <p>Wood Flooring</p>
                         </div>
                     </div>
@@ -249,7 +250,7 @@
         <div class="contentBorder fifthContent">
             <div class="tech_secTitleBlock fifthTitle">
                 <h2 class="animate__animated wow animate__fadeInRight">The Collections</h2>
-                <p class="tech_parTwenty animate__animated wow animate__fadeInDown">
+                <p class="tech_parFontSize animate__animated wow animate__fadeInDown">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has <br>
                     been the industry's standard dummy text.
                 </p>
@@ -260,7 +261,7 @@
                         <img src="./images/prod1.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
-                        <h3 class="tech_h3Twenty">Zurich Vision 60×60</h3>
+                        <h3 class="tech_h3FontSize">Zurich Vision 60×60</h3>
                         <p>237.99 SAR</p>
                     </div>
                 </div>
@@ -269,7 +270,7 @@
                         <img src="./images/min/prod2_min.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
-                        <h3 class="tech_h3Twenty">Zurich Pearl 60×60</h3>
+                        <h3 class="tech_h3FontSize">Zurich Pearl 60×60</h3>
                         <p>312.49 SAR</p>
                     </div>
                 </div>
@@ -278,7 +279,7 @@
                         <img src="./images/min/prod3_min.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
-                        <h3 class="tech_h3Twenty">Zurich Grey 60×60</h3>
+                        <h3 class="tech_h3FontSize">Zurich Grey 60×60</h3>
                         <p>312.49 SAR</p>
                     </div>
                 </div>
@@ -287,7 +288,7 @@
                         <img src="./images/prod4.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
-                        <h3 class="tech_h3Twenty">Zurich Dark Grey 60×60</h3>
+                        <h3 class="tech_h3FontSize">Zurich Dark Grey 60×60</h3>
                         <p>312.49 SAR</p>
                     </div>
                 </div>
@@ -296,7 +297,7 @@
                         <img src="./images/prod5.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
-                        <h3 class="tech_h3Twenty">Windsor White Oak</h3>
+                        <h3 class="tech_h3FontSize">Windsor White Oak</h3>
                         <p>312.49 SAR</p>
                     </div>
                 </div>
@@ -305,7 +306,7 @@
                         <img src="./images/prod6.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
-                        <h3 class="tech_h3Twenty">Sicily Grey Décor 30×60</h3>
+                        <h3 class="tech_h3FontSize">Sicily Grey Décor 30×60</h3>
                         <p>312.49 SAR</p>
                     </div>
                 </div>
@@ -314,7 +315,7 @@
                         <img src="./images/prod7.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
-                        <h3 class="tech_h3Twenty">Sardinia White</h3>
+                        <h3 class="tech_h3FontSize">Sardinia White</h3>
                         <p>312.49 SAR</p>
                     </div>
                 </div>
@@ -323,7 +324,7 @@
                         <img src="./images/min/prod8_min.jpg" loading="lazy">
                     </div>
                     <div class="fifthCatalogueTextBlock">
-                        <h3 class="tech_h3Twenty">Sicily Grey 30×60</h3>
+                        <h3 class="tech_h3FontSize">Sicily Grey 30×60</h3>
                         <p>312.49 SAR</p>
                     </div>
                 </div>
@@ -338,7 +339,7 @@
             <div class="tech_textBlock sixthTextCard">
                 <div class="sixthTextCard__textBlock">
                     <h1 class="animate__animated wow animate__fadeInUp">Our Showrooms</h1>
-                    <p class="tech_parTwenty animate__animated wow animate__fadeInRight">
+                    <p class="tech_parFontSize animate__animated wow animate__fadeInRight">
                         Lorem Ipsum is simply dummy text of the printing <br>
                         and typesetting industry. Lorem Ipsum has been the <br>
                         industry's standard dummy text.
